Added log out button and session invalidator for removing cookies from db and browser

--- a/my-app/app/home/Home.module.css
+++ b/my-app/app/home/Home.module.css
@@ -1,39 +1,58 @@
 /* Home.module.css */
 .mainMenuWrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh; /* Use the full height of the viewport */
-    padding: 20px;
-  }
-  
-  .greeting {
-    margin-bottom: 20px;
-  }
-  
-  .menuContainer {
-    display: flex;
-    justify-content: center;
-    gap: 20px; /* This creates space between your menu items */
-  }
-  
-  .menuItem {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    width: 350px; /* Larger width for bigger squares */
-    height: 350px; /* Larger height for bigger squares */
-    background-color: #dddddd; /* White background */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Simple box shadow for styling */
-    border-radius: 20px; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh; /* Use the full height of the viewport */
+  padding: 20px;
+}
 
-  }
-  
-  .heading { /* Added class for heading elements */
-    margin: 0; 
-    padding: 15px; 
-    color: #333; /* Dark text color */
-  }
-  
+.greeting {
+  margin-bottom: 20px;
+}
+
+.menuContainer {
+  display: flex;
+  justify-content: center;
+  gap: 20px; /* This creates space between your menu items */
+}
+
+.menuItem {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 350px; /* Larger width for bigger squares */
+  height: 350px; /* Larger height for bigger squares */
+  background-color: #dddddd; /* White background */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Simple box shadow for styling */
+  border-radius: 20px;
+}
+
+.heading {
+  /* Added class for heading elements */
+  margin: 0;
+  padding: 15px;
+  color: #333; /* Dark text color */
+}
+.logoutButtonContainer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 20px;
+}
+
+.logoutButton {
+  padding: 10px 20px;
+  background-color: #007bff; /* Bootstrap primary color */
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.logoutButton:hover {
+  background-color: #0056b3; /* A slightly darker blue for hover effect */
+}
