--- a/my-app/app/stories/[id]/BoldedWordModal.module.css
+++ b/my-app/app/stories/[id]/BoldedWordModal.module.css
@@ -28,6 +28,7 @@
     margin-top: 20px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-right: 5px;
   }
   
   .button:hover {
