--- a/my-app/app/flashcards/Flashcards.module.css
+++ b/my-app/app/flashcards/Flashcards.module.css
@@ -118,3 +118,22 @@
     background-color: #333;
     color: #fff;
   }
+
+  .isAdminButton{
+    position: absolute;
+    top:4rem;
+    left:1rem;
+    background-color: #fff;
+    color: #333;
+    border: 2px solid #333;
+    border-radius: 25px;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+  }
+
+  .isAdminButton:hover {
+    background-color: #333;
+    color: #fff;
+  }
