--- a/my-app/app/home/Home.module.css
+++ b/my-app/app/home/Home.module.css
@@ -7,6 +7,10 @@
   height: 100vh; /* Use the full height of the viewport */
   padding: 20px;
   background-color: #f0f8ff;
+  background-image: url("../../public/mainMenuBackground.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-size: 100%;
 }
 
 .greeting {
@@ -26,11 +30,12 @@
   align-items: center;
   width: 350px; /* Larger width for bigger squares */
   height: 350px; /* Larger height for bigger squares */
-  background-color: #dddddd; /* White background */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Simple box shadow for styling */
+  background-color: #fffacd; /* White background */
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 1); /* Increased box shadow for styling */
   border-radius: 20px;
   position: relative;
   text-align: center;
+  border: 4px solid black;
 }
 
 .heading {
@@ -48,12 +53,13 @@
 
 .logoutButton {
   padding: 10px 20px;
-  background-color: #007bff; /* Bootstrap primary color */
+  background-color: #fdbc46; /* Bootstrap primary color */
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s;
+  border: 2px solid black;
 }
 
 .button {
@@ -68,6 +74,8 @@
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  border:2px solid black;
+  border-radius: 25px;
 }
 
 .button:hover {
@@ -75,5 +83,41 @@
 }
 
 .logoutButton:hover {
-  background-color: #0056b3; /* A slightly darker blue for hover effect */
+  background-color: #fca80e;
+}
+
+.menuItem.color1 {
+  background-color: #a64248; 
+}
+
+.menuItem.color2 {
+  background-color: #e5af59;
+}
+
+.menuItem.color3 {
+  background-color: #7292c3; 
+}
+
+.menuItem.color4 {
+  background-color: #48a9b1;
+}
+
+.button.color1{
+  background-color: #fdbc46
+
+}
+
+.button.color2{
+  background-color: #fdbc46;
+
+}
+
+.button.color3{
+  background-color: #2d4d90;
+
+}
+
+.button.color4{
+  background-color: #235a92;
+
 }
