--- a/my-app/app/hangeul/main/HangeulStart.module.css
+++ b/my-app/app/hangeul/main/HangeulStart.module.css
@@ -84,3 +84,23 @@
   font-size: 24px;
   color: #666;
 }
+
+
+.homeButton {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  background-color: #fff;
+  color: #333;
+  border: 2px solid #333;
+  border-radius: 25px;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.homeButton:hover {
+  background-color: #333;
+  color: #fff;
+}
