--- a/my-app/app/stories/StoriesPage.module.css
+++ b/my-app/app/stories/StoriesPage.module.css
@@ -5,17 +5,28 @@
   padding: 0;
   font-family: -apple-system, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .title {
-  font-size: 24px;
-  margin-bottom: 20px;
+  font-size: 70px;
+  font-weight: 600;
+  background-image: linear-gradient(to left, #553c9a, #b393d3);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
 }
 
 .storyGrid {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 20px;
+  margin: 20px auto;
+  overflow-y: auto;
+  max-height: calc(100vh - 200px);
+  max-width: calc(100% - 80px);
 }
 
 .storyBox {
@@ -26,6 +37,12 @@
   color: inherit;
   transition: transform 0.3s;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 200px;
 }
 
 .storyBox:hover {
@@ -56,6 +73,7 @@
 .labelText {
   font-family: -apple-system, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   margin-right: 15px;
+  font-size: 20px;
 }
 
 .homeButton {
