--- a/my-app/app/graphs/WordStats.module.css
+++ b/my-app/app/graphs/WordStats.module.css
@@ -1,20 +1,102 @@
+.wrapper {
+  font-family: "Roboto", sans-serif;
+  background: linear-gradient(to bottom right, #3498db, #8e44ad);
+  color: #fff;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .container {
-    max-width: 800px;
-    margin: 0 auto;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 40px;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.heading {
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 30px;
+  color: #4a4a4a;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.chartContainer {
+  height: 500px; /* Adjust the height as needed */
+  width: 900px;
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+  .container {
     padding: 20px;
   }
-  
+
   .heading {
     font-size: 2rem;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 20px;
   }
-  
-  .chart {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+
+  .chartContainer {
+    height: 300px; /* Adjust the height for smaller screens */
+    width:400px;
   }
+}
+
+/* Animation */
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.container {
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+/* Chart Styles */
+.chart {
+  position: relative;
+}
+
+.chart::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0.8),
+    rgba(255, 255, 255, 0.2)
+  );
+  z-index: 1;
+  pointer-events: none;
+}
+
+.homeButton {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  background-color: #fff;
+  color: #333;
+  border: 2px solid #333;
+  border-radius: 25px;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.homeButton:hover {
+  background-color: #333;
+  color: #fff;
+}
